--- a/almond/data/nginx.conf
+++ b/almond/data/nginx.conf
@@ -50,6 +50,7 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host 127.0.0.1:3000;
+            proxy_set_header Origin http://127.0.0.1:3000;
         }
     }
 
@@ -77,6 +78,7 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host 127.0.0.1:3000;
+            proxy_set_header Origin http://127.0.0.1:3000;
         }
     }
 }
