--- a/almond/data/nginx.conf
+++ b/almond/data/nginx.conf
@@ -49,8 +49,8 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-            proxy_set_header Host 127.0.0.1:3000;
-            proxy_set_header Origin http://127.0.0.1:3000;
+            proxy_set_header Host "127.0.0.1:3000";
+            proxy_set_header Origin "http://127.0.0.1:3000";
         }
     }
 
@@ -77,8 +77,8 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
-            proxy_set_header Host 127.0.0.1:3000;
-            proxy_set_header Origin http://127.0.0.1:3000;
+            proxy_set_header Host "127.0.0.1:3000";
+            proxy_set_header Origin "http://127.0.0.1:3000";
         }
     }
 }
