--- a/ada/config.json
+++ b/ada/config.json
@@ -1,17 +1,18 @@
 {
-  "name": "Hey Dude!",
+  "name": "Hey Ada!",
   "version": "0.1",
-  "slug": "dude",
-  "description": "Generic voice Assistant",
-  "url": "https://home-assistant.io/addons/dude/",
+  "slug": "ada",
+  "description": "Home Assistant featured voice assist",
+  "url": "https://home-assistant.io/addons/ada/",
   "arch": ["armv7", "amd64"],
   "startup": "application",
   "boot": "auto",
   "audio": true,
+  "homeassistant": "0.102.0.dev",
   "homeassistant_api": true,
   "options": {
   },
   "schema": {
   },
-  "image": "homeassistant/{arch}-addon-dude"
+  "image": "homeassistant/{arch}-addon-ada"
 }
