Allow more time to build

--- a/.azure/azp-template-addon.yml
+++ b/.azure/azp-template-addon.yml
@@ -9,7 +9,8 @@ jobs:
 - job: '${{ parameters.addon }}'
   condition: eq(variables['Build.SourceBranchName'], 'master')
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-latest'
+  timeoutInMinutes: 360
   steps:
   - script: sudo docker login -u $(dockerUser) -p $(dockerPassword)
     displayName: 'Docker hub login'
