Add armhf support for Ada

--- a/ada/azure-pipelines.yml
+++ b/ada/azure-pipelines.yml
@@ -19,4 +19,4 @@ jobs:
 - template: /.azure/azp-template-addon.yml
   parameters:
     addon: 'ada'
-    arch: '--amd64 --armv7'
+    arch: '--amd64 --armv7 --armhf'
