--- a/configurator/Dockerfile
+++ b/configurator/Dockerfile
@@ -5,9 +5,12 @@ FROM $BUILD_FROM
 ARG CONFIGURATOR_VERSION
 ARG HASSIO_AUTH_VERSION
 RUN apk add --no-cache \
-    git nginx nginx-mod-http-lua lua-resty-http openssh-client \
-    && git clone --depth 1 -b ${HASSIO_AUTH_VERSION} \
-      "https://github.com/home-assistant/hassio-auth" \
+      git \
+      nginx \
+      nginx-mod-http-lua \
+      lua-resty-http \
+      openssh-client \
+    && git clone --depth 1 -b ${HASSIO_AUTH_VERSION} "https://github.com/home-assistant/hassio-auth" \
     && cp -f hassio-auth/nginx-frontend/ha-auth.lua /etc/nginx/ \
     && cp -f hassio-auth/nginx-frontend/example/nginx-ingress.conf /etc/nginx/ \
     && rm -fr /usr/src/hassio-auth \
