client certificate authentication initial commit

--- a/nginx_proxy/Dockerfile
+++ b/nginx_proxy/Dockerfile
@@ -7,5 +7,6 @@ RUN apk add --no-cache nginx openssl curl
 # Copy data
 COPY data/run.sh /
 COPY data/nginx.conf /etc/
+COPY data/v3_ca /
 
 CMD [ "/run.sh" ]
