--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -49,6 +49,9 @@ http {
         ssl_prefer_server_ciphers on;
         ssl_session_cache shared:SSL:10m;
 
+        ssl_client_certificate /etc/nginx/ca-root.pem;
+        ssl_verify_client off;
+
         proxy_buffering off;
 
         #include /share/nginx_proxy_default*.conf;
