--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -32,8 +32,9 @@
       "country": "DE",
       "state": "BW",
       "city": "Friedrichshafen",
-      "organization": "Home Assistant",
-      "common_name": "home-assistant.io"
+      "organization": "Example Org",
+      "common_name": "example.com",
+      "client_common_name": "client.example.com"
     }
   },
   "schema": {
@@ -57,8 +58,9 @@
       "state": "str",
       "city": "str",
       "organization": "str",
-      "common_name": "str"
+      "common_name": "str",
+      "client_common_name": "str"
     }
-  },
+  }
   "image": "homeassistant/{arch}-addon-nginx_proxy"
 }
