--- a/almond/config.json
+++ b/almond/config.json
@@ -13,8 +13,12 @@
   "homeassistant": "0.102.0.dev",
   "homeassistant_api": true,
   "options": {
+    "stt": "cloud",
+    "tts": "cloud"
   },
   "schema": {
+    "stt": "str",
+    "tts": "str"
   },
   "image": "homeassistant/{arch}-addon-almond"
 }
