ada: Adjust source links in Dockerfile

--- a/ada/Dockerfile
+++ b/ada/Dockerfile
@@ -1,11 +1,12 @@
 ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
-# Install Dude
+# Install Ada
 WORKDIR /usr/src/ada
 ARG ADA_VERSION
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
         portaudio19-dev \
         libsndfile1 \
         mplayer \
@@ -16,12 +17,13 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         git \
         build-essential \
     \
-    && git clone --depth 1 -b ${ADA_VERSION} https://github.com/home-assistant/dude . \
+    && git clone --depth 1 -b ${ADA_VERSION} \
+        "https://github.com/home-assistant/ada" . \
     && rm -rf .git \
     && pip3 install --no-cache-dir -U setuptools wheel \
     && pip3 install --no-cache-dir -r requirements.txt \
     && pip3 install --no-cache-dir -e . \
-    && python3 -m compileall dude \
+    && python3 -m compileall ada \
     \
     && apt-get purge -y --auto-remove \
         git \
