ada: Adjust URL to point to repository

--- a/ada/config.json
+++ b/ada/config.json
@@ -3,7 +3,7 @@
   "version": "0.9",
   "slug": "ada",
   "description": "Home Assistant featured voice assist",
-  "url": "https://github.com/home-assistant/hassio-addons/blob/master/ada/README.md",
+  "url": "https://github.com/home-assistant/hassio-addons/blob/master/ada",
   "arch": ["armhf", "armv7", "amd64"],
   "startup": "application",
   "boot": "auto",
