--- a/almond/azure-pipelines.yml
+++ b/almond/azure-pipelines.yml
@@ -3,20 +3,19 @@
 trigger:
   branches:
     include:
-    - master
+      - master
   paths:
     include:
-    - almond/*
+      - almond/*
 pr: none
 
 variables:
   - name: versionBuilder
-    value: '2.0'
+    value: "2.0"
   - group: docker
 
-
 jobs:
-- template: /.azure/azp-template-addon.yml
-  parameters:
-    addon: 'almond'
-    arch: '--amd64 --armv7 --aarch64'
+  - template: /.azure/azp-template-addon.yml
+    parameters:
+      addon: "almond"
+      arch: "--amd64 --armv7 --aarch64"
