--- a/almond/config.json
+++ b/almond/config.json
@@ -12,9 +12,7 @@
   "panel_icon": "mdi:comment-eye-outline",
   "homeassistant": "0.102.0.dev",
   "homeassistant_api": true,
-  "options": {
-  },
-  "schema": {
-  },
+  "options": {},
+  "schema": {},
   "image": "homeassistant/{arch}-addon-almond"
 }
