--- a/dnsmasq/config.json
+++ b/dnsmasq/config.json
@@ -3,7 +3,7 @@
   "version": "1.3",
   "slug": "dnsmasq",
   "description": "A simple DNS server",
-  "url": "https://home-assistant.io/addons/dnsmasq/",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/dnsmasq",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "system",
   "boot": "auto",
