--- a/duckdns/Dockerfile
+++ b/duckdns/Dockerfile
@@ -3,7 +3,7 @@ FROM $BUILD_FROM
 
 # Setup base
 ARG DEHYDRATED_VERSION
-RUN apk add --no-cache curl openssl \
+RUN apk add --no-cache openssl \
   && curl -s -o /usr/bin/dehydrated https://raw.githubusercontent.com/lukas2511/dehydrated/v$DEHYDRATED_VERSION/dehydrated \
   && chmod a+x /usr/bin/dehydrated
 
