--- a/duckdns/Dockerfile
+++ b/duckdns/Dockerfile
@@ -4,7 +4,8 @@ FROM $BUILD_FROM
 # Setup base
 ARG DEHYDRATED_VERSION
 RUN apk add --no-cache openssl \
-  && curl -s -o /usr/bin/dehydrated https://raw.githubusercontent.com/lukas2511/dehydrated/v$DEHYDRATED_VERSION/dehydrated \
+  && curl -s -o /usr/bin/dehydrated \
+    "https://raw.githubusercontent.com/lukas2511/dehydrated/v${DEHYDRATED_VERSION}/dehydrated" \
   && chmod a+x /usr/bin/dehydrated
 
 # Copy data
