--- a/git_pull/azure-pipelines.yml
+++ b/git_pull/azure-pipelines.yml
@@ -3,20 +3,19 @@
 trigger:
   branches:
     include:
-    - master
+      - master
   paths:
     include:
-    - git_pull/*
+      - git_pull/*
 pr: none
 
 variables:
   - name: versionBuilder
-    value: '2.0'
+    value: "2.0"
   - group: docker
 
-
 jobs:
-- template: /.azure/azp-template-addon.yml
-  parameters:
-    addon: 'git_pull'
-    arch: '--all'
+  - template: /.azure/azp-template-addon.yml
+    parameters:
+      addon: "git_pull"
+      arch: "--all"
