Update documentation & Dockerfile source locations (#889)
* ada: Fix documentation link

* ada: Adjust source links in Dockerfile

* ada: Update add-on documentation to match current state

* ada: Bump add-on version to 0.9

* ada: Adjust URL to point to repository

* ada: Format YAML with Prettier

* ada: Short build.json

--- a/ada/config.json
+++ b/ada/config.json
@@ -1,9 +1,9 @@
 {
   "name": "Hey Ada!",
-  "version": "0.8",
+  "version": "0.9",
   "slug": "ada",
   "description": "Home Assistant featured voice assist",
-  "url": "https://home-assistant.io/addons/ada/",
+  "url": "https://github.com/home-assistant/hassio-addons/blob/master/ada",
   "arch": ["armhf", "armv7", "amd64"],
   "startup": "application",
   "boot": "auto",
