configurator: Removed direct access from add-on

--- a/configurator/config.json
+++ b/configurator/config.json
@@ -7,16 +7,12 @@
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "homeassistant": "0.91.1",
   "startup": "application",
-  "webui": "http://[HOST]:[PORT:8080]",
   "ingress": true,
+  "ingress_port": 80,
   "panel_icon": "mdi:wrench",
-  "auth_api": true,
   "homeassistant_api": true,
   "boot": "auto",
   "map": ["backup:rw", "config:rw", "share:rw", "ssl:rw"],
-  "ports": {
-    "8080/tcp": null
-  },
   "options": {
     "dirsfirst": false,
     "enforce_basepath": false,
