--- a/configurator/data/configurator.conf
+++ b/configurator/data/configurator.conf
@@ -1,5 +1,5 @@
 {
-    "LISTENIP": "127.0.0.1",
+    "LISTENIP": "0.0.0.0",
     "PORT": 80,
     "GIT": true,
     "BASEPATH": "/config",
@@ -12,7 +12,7 @@
     "HASS_API_PASSWORD": "%%TOKEN%%",
     "USERNAME": null,
     "PASSWORD": null,
-    "ALLOWED_NETWORKS": [],
+    "ALLOWED_NETWORKS": ["172.30.32.2"],
     "ALLOWED_DOMAINS": [],
     "BANNED_IPS": [],
     "BANLIMIT": 0,
