--- a/configurator/data/configurator.conf
+++ b/configurator/data/configurator.conf
@@ -3,21 +3,21 @@
     "PORT": 80,
     "GIT": true,
     "BASEPATH": "/config",
-    "ENFORCE_BASEPATH": %%ENFORCE_BASEPATH%%,
+    "ENFORCE_BASEPATH": true,
     "SSL_CERTIFICATE": null,
     "SSL_KEY": null,
     "IGNORE_SSL": false,
     "HASS_API": "http://hassio/homeassistant/api/",
     "HASS_WS_API": null,
-    "HASS_API_PASSWORD": "%%TOKEN%%",
+    "HASS_API_PASSWORD": null,
     "USERNAME": null,
     "PASSWORD": null,
     "ALLOWED_NETWORKS": ["172.30.32.2"],
     "ALLOWED_DOMAINS": [],
     "BANNED_IPS": [],
     "BANLIMIT": 0,
-    "IGNORE_PATTERN": %%IGNORE_PATTERN%%,
-    "DIRSFIRST": %%DIRSFIRST%%,
+    "IGNORE_PATTERN": [],
+    "DIRSFIRST": false,
     "SESAME": null,
     "SESAME_TOTP_SECRET": null,
     "VERIFY_HOSTNAME": null,
