--- a/configurator/config.json
+++ b/configurator/config.json
@@ -1,26 +1,21 @@
 {
   "name": "Configurator",
-  "version": "3.7",
+  "version": "4.0",
   "slug": "configurator",
   "description": "Browser-based configuration file editor for Home Assistant",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/configurator",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "homeassistant": "0.91.1",
   "startup": "application",
-  "webui": "http://[HOST]:[PORT:8080]",
   "ingress": true,
   "panel_icon": "mdi:wrench",
-  "auth_api": true,
   "homeassistant_api": true,
   "boot": "auto",
   "map": ["backup:rw", "config:rw", "share:rw", "ssl:rw"],
-  "ports": {
-    "8080/tcp": null
-  },
   "options": {
     "dirsfirst": false,
     "enforce_basepath": false,
-    "ignore_pattern": ["__pycache__"],
+    "ignore_pattern": ["__pycache__", ".cloud", ".storage", "deps"],
     "ssh_keys": []
   },
   "schema": {
