--- a/google_assistant/config.json
+++ b/google_assistant/config.json
@@ -3,7 +3,7 @@
   "version": "2.2",
   "slug": "google_assistant",
   "description": "A virtual personal assistant developed by Google",
-  "url": "https://home-assistant.io/addons/google_assistant/",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/google_assistant",
   "startup": "application",
   "boot": "auto",
   "arch": ["armv7", "amd64"],
