configurator: Enforce base path by default

--- a/configurator/config.json
+++ b/configurator/config.json
@@ -14,7 +14,7 @@
   "map": ["backup:rw", "config:rw", "share:rw", "ssl:rw"],
   "options": {
     "dirsfirst": false,
-    "enforce_basepath": false,
+    "enforce_basepath": true,
     "ignore_pattern": ["__pycache__", ".cloud", ".storage", "deps"],
     "ssh_keys": []
   },
