--- a/homematic/azure-pipelines.yml
+++ b/homematic/azure-pipelines.yml
@@ -3,20 +3,19 @@
 trigger:
   branches:
     include:
-    - master
+      - master
   paths:
     include:
-    - homematic/*
+      - homematic/*
 pr: none
 
 variables:
   - name: versionBuilder
-    value: '2.0'
+    value: "2.0"
   - group: docker
 
-
 jobs:
-- template: /.azure/azp-template-addon.yml
-  parameters:
-    addon: 'homematic'
-    arch: '--armv7 --i386'
+  - template: /.azure/azp-template-addon.yml
+    parameters:
+      addon: "homematic"
+      arch: "--armv7 --i386"
