--- a/letsencrypt/config.json
+++ b/letsencrypt/config.json
@@ -3,7 +3,7 @@
   "version": "4.2",
   "slug": "letsencrypt",
   "description": "Manage certificate from Let's Encrypt",
-  "url": "https://home-assistant.io/addons/lets_encrypt/",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/letsencrypt",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "once",
   "boot": "manual",
