--- a/mariadb/config.json
+++ b/mariadb/config.json
@@ -12,20 +12,21 @@
   },
   "options": {
     "databases": ["homeassistant"],
-    "logins": [
-      {"username": "hass", "host": "%", "password": null}
-    ],
+    "logins": [{ "username": "hass", "host": "%", "password": null }],
     "rights": [
-      {"username": "hass", "host": "%", "database": "homeassistant", "grant": "ALL PRIVILEGES ON"}
+      {
+        "username": "hass",
+        "host": "%",
+        "database": "homeassistant",
+        "grant": "ALL PRIVILEGES ON"
+      }
     ]
   },
   "schema": {
     "databases": ["str"],
-    "logins": [
-        {"username": "str", "host": "str", "password": "str"}
-    ],
+    "logins": [{ "username": "str", "host": "str", "password": "str" }],
     "rights": [
-      {"username": "str", "host": "str", "database": "str", "grant": "str"}
+      { "username": "str", "host": "str", "database": "str", "grant": "str" }
     ]
   },
   "image": "homeassistant/{arch}-addon-mariadb",
