--- a/mariadb/config.json
+++ b/mariadb/config.json
@@ -3,7 +3,7 @@
   "version": "1.3",
   "slug": "mariadb",
   "description": "An SQL database server",
-  "url": "https://home-assistant.io/addons/mariadb/",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/mariadb",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "system",
   "boot": "auto",
