--- a/mosquitto/config.json
+++ b/mosquitto/config.json
@@ -16,7 +16,7 @@
     "1884/tcp": 1884,
     "8883/tcp": 8883,
     "8884/tcp": 8884
-   },
+  },
   "options": {
     "logins": [],
     "anonymous": false,
@@ -29,9 +29,7 @@
     "require_certificate": false
   },
   "schema": {
-    "logins": [
-        {"username": "str", "password": "str"}
-    ],
+    "logins": [{ "username": "str", "password": "str" }],
     "anonymous": "bool",
     "customize": {
       "active": "bool",
