--- a/rpc_shutdown/azure-pipelines.yml
+++ b/rpc_shutdown/azure-pipelines.yml
@@ -3,20 +3,19 @@
 trigger:
   branches:
     include:
-    - master
+      - master
   paths:
     include:
-    - rpc_shutdown/*
+      - rpc_shutdown/*
 pr: none
 
 variables:
   - name: versionBuilder
-    value: '2.0'
+    value: "2.0"
   - group: docker
 
-
 jobs:
-- template: /.azure/azp-template-addon.yml
-  parameters:
-    addon: 'rpc_shutdown'
-    arch: '--all'
+  - template: /.azure/azp-template-addon.yml
+    parameters:
+      addon: "rpc_shutdown"
+      arch: "--all"
