rpc_shutdown: Update add-on URL & Description

--- a/rpc_shutdown/config.json
+++ b/rpc_shutdown/config.json
@@ -2,8 +2,8 @@
   "name": "RPC Shutdown",
   "version": "2.2",
   "slug": "rpc_shutdown",
-  "description": "Simple way for remote windows shutdowns",
-  "url": "https://home-assistant.io/addons/rpc_shutdown/",
+  "description": "Shutdown Windows machines remotely",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/rpc_shutdown",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "services",
   "boot": "auto",
