--- a/snips/config.json
+++ b/snips/config.json
@@ -3,7 +3,7 @@
   "version": "6.1",
   "slug": "snips",
   "description": "Local voice control platform",
-  "url": "https://home-assistant.io/addons/snips/",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/snips",
   "arch": ["armhf", "amd64"],
   "startup": "application",
   "boot": "auto",
