--- a/ssh/Dockerfile
+++ b/ssh/Dockerfile
@@ -4,7 +4,6 @@ FROM $BUILD_FROM
 # Setup base
 RUN apk add --no-cache \
     bash-completion \
-    curl \
     git \
     mosquitto-clients \
     nano \
@@ -23,8 +22,8 @@ RUN sed -i 's/^#[[:space:]]*\(include "\/usr\/share\/nano\/\*\.nanorc".*\)/\1/' 
 # Hass.io CLI
 ARG BUILD_ARCH
 ARG CLI_VERSION
-RUN apk add --no-cache curl \
-    && curl -Lso /usr/bin/hassio https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH} \
+RUN curl -Lso /usr/bin/hassio \
+        "https://github.com/home-assistant/hassio-cli/releases/download/${CLI_VERSION}/hassio_${BUILD_ARCH}" \
     && chmod a+x /usr/bin/hassio \
     && /usr/bin/hassio completion > /usr/share/bash-completion/completions/hassio
 
