nginx_proxy: Collection of small improvements (#911)
* nginx_proxy: Prettier JSON & YAML files

* nginx_proxy: Sort build.json

* nginx_proxy: Update add-on URL

* nginx_proxy: Remove curl from Dockerfile, already in base

* nginx_proxy: Tweak documentation

--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -3,14 +3,14 @@
   "version": "2.5",
   "slug": "nginx_proxy",
   "description": "An SSL/TLS proxy",
-  "url": "https://home-assistant.io/addons/nginx_proxy/",
+  "url": "https://github.com/home-assistant/hassio-addons/tree/master/nginx_proxy",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "application",
   "boot": "auto",
   "ports": {
     "80/tcp": null,
     "443/tcp": 443
-   },
+  },
   "map": ["ssl", "share"],
   "options": {
     "domain": null,
