--- a/ssh/config.json
+++ b/ssh/config.json
@@ -6,6 +6,10 @@
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/ssh",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "services",
+  "ingress": true,
+  "ingress_port": 0,
+  "panel_icon": "mdi:console",
+  "panel_title": "Terminal",
   "boot": "auto",
   "hassio_api": true,
   "hassio_role": "manager",
