--- a/ssh/config.json
+++ b/ssh/config.json
@@ -1,11 +1,14 @@
 {
   "name": "SSH server",
-  "version": "7.1",
+  "version": "8.0",
   "slug": "ssh",
   "description": "Allows connections over SSH",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/ssh",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
   "startup": "services",
+  "ingress": true,
+  "panel_icon": "mdi:console",
+  "panel_title": "Terminal",
   "boot": "auto",
   "hassio_api": true,
   "hassio_role": "manager",
