Add listen_ipv6 to schema and options
As part of the fix for IPv4 Addresses being shown as IPv6, I've added the option to listen on IPv6, which should fix the issue if the flag is set to false.

--- a/nginx_proxy/config.json
+++ b/nginx_proxy/config.json
@@ -18,6 +18,7 @@
     "keyfile": "privkey.pem",
     "hsts": "max-age=31536000; includeSubDomains",
     "cloudflare": false,
+    "listen_ipv6": true,
     "customize": {
       "active": false,
       "default": "nginx_proxy_default*.conf",
@@ -30,6 +31,7 @@
     "keyfile": "str",
     "hsts": "str",
     "cloudflare": "bool",
+    "listen_ipv6": "bool",
     "customize": {
       "active": "bool",
       "default": "str",
