--- a/git_pull/config.json
+++ b/git_pull/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Git pull",
-  "version": "7.7",
+  "version": "7.8",
   "slug": "git_pull",
   "description": "Simple git pull to update the local configuration",
   "url": "https://github.com/home-assistant/hassio-addons/tree/master/git_pull",
@@ -33,10 +33,10 @@
     "deployment_user": "str",
     "deployment_password": "str",
     "git_branch": "str",
-    "git_command": "match(pull|reset)",
+    "git_command": "list(pull|reset)",
     "git_remote": "str",
     "git_prune": "bool",
-    "repository": "match((?:.+):(//)?(.*?)(\\.git)(/?|\\#[-\\d\\w._]+?))",
+    "repository": "str",
     "auto_restart": "bool",
     "restart_ignore": ["str"],
     "repeat": {
