--- a/deconz/Dockerfile
+++ b/deconz/Dockerfile
@@ -60,4 +60,4 @@ COPY data/ledvance-otau-dl.sh /bin/
 COPY data/nginx.conf /etc/nginx/nginx.conf
 COPY data/run.sh data/discovery.sh /
 
-CMD ["/bin/chmod a+x /bin/ledvance-otau-dl.sh && /run.sh"]
+CMD ["/run.sh"]
