Better fix for #815 (just flip blocks)

--- a/cec_scan/Dockerfile
+++ b/cec_scan/Dockerfile
@@ -27,10 +27,14 @@ RUN \
         "https://github.com/Pulse-Eight/libcec" /usr/src/libcec \
     && mkdir -p /usr/src/libcec/build \
     && cd /usr/src/libcec/build \
-    && cmake \
-        -DCMAKE_INSTALL_PREFIX:PATH=/usr/local \
-        -DRPI_INCLUDE_DIR=/opt/vc/include \
-        -DRPI_LIB_DIR=/opt/vc/lib .. \
+    && if [[ "armhf armv7 aarch64" = *"$BUILD_ARCH"* ]]; then \
+            cmake \
+                -DCMAKE_INSTALL_PREFIX:PATH=/usr/local \
+                -DRPI_INCLUDE_DIR=/opt/vc/include \
+                -DRPI_LIB_DIR=/opt/vc/lib ..; \
+        else \
+            cmake -DCMAKE_INSTALL_PREFIX:PATH=/usr/local ..; \
+        fi \
     && make -j$(nproc) \
     && make install \
     && apk del --no-cache .build-dependencies \
