--- a/nginx_proxy/data/nginx.conf
+++ b/nginx_proxy/data/nginx.conf
@@ -18,8 +18,8 @@ http {
 	
     server {
         server_name _;
-        listen 80 default_server ipv6only=off;
-        listen 443 ssl http2 default_server ipv6only=off;
+        listen 80 default_server;
+        listen 443 ssl http2 default_server;
         ssl_certificate /data/ssl-cert-snakeoil.pem;
         ssl_certificate_key /data/ssl-cert-snakeoil.key;
         return 444;
