Run start_hassio.sh from inside .devcontainer (https://github.com/home-assistant/hassio-addons/pull/1040#discussion_r374373323)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,7 @@
         {
             "label": "Start Hass.io",
             "type": "shell",
-            "command": "/usr/local/bin/start_hassio.sh",
+            "command": "/workspaces/test_hassio/addons/local/.devcontainer/start_hassio.sh",
             "group": {
                 "kind": "test",
                 "isDefault": true,
@@ -19,7 +19,7 @@
         },{
             "label": "Cleanup stale Hass.io environment",
             "type": "shell",
-            "command": "/usr/local/bin/start_hassio.sh --cleanup",
+            "command": "/workspaces/test_hassio/addons/local/.devcontainer/start_hassio.sh --cleanup",
             "group": "test",
             "presentation": {
                 "reveal": "always",
